<resources>
    <string name="app_name">Coe</string>
    <string name="login">Login</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="em_desenvolvimento">Em desenvolvimento</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar uma conta</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome_usuario">Nome</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="novo_cadastra_se">É novo? Cadastre-se</string>
    <string name="ja_e_novo">Já tem uma conta? Faça seu login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carregando">Carregando ...</string>
    <string name="usuario_invalido">Usuário ou senha inválidos.</string>
    <string name="sobre_nome">Sobre nome</string>
    <string name="email_ja_cadastrado">Email já cadastrado no sistema.</string>
    <string name="usuario_registrado">Usuário registrado com sucesso.</string>
    <string name="buscar">Buscar</string>
    <string name="digite_nome_curso">Digite o nome do curso</string>
    <string name="descricao">Descrição</string>
    <string name="a_fazer">Curso em andamento:</string>
    <string name="salvar">Salvar</string>
    <string name="matricule_se">Matricule-se</string>
    <string name="teste_url"><![CDATA[epDCjksKMok&feature=youtu.be&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&ab_channel=CursoemVídeo]]></string>
    <string name="voltar">Voltar</string>
    <string name="nao_foi_possivel_efetuar_matricula">Não foi possivel efetuar a matricula, tente mais tarde!</string>
</resources>