<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".ui.LoginActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/img_logo_login" />


        <EditText
            android:id="@+id/edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColorHint="@color/colorBlack"

            />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_border"
            android:hint="@string/senha"
            android:inputType="numberPassword"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColorHint="@color/colorBlack"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorBlack" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/esqueceu_senha"
            android:textColor="@color/colorBlue" />

        <TextView
            android:id="@+id/button_cadasttrar_se"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_extrabold"
            android:layout_marginEnd="32dp"
            android:text="@string/novo_cadastra_se"
            android:textColor="@color/colorBlue" />

        <Button
            android:id="@+id/btnLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_black"
            android:hint="@string/entrar"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>